@@ -1290,7 +1290,7 @@ void filetypes_load_config(gint ft_id, gboolean reload)
 
 gchar *filetypes_get_conf_extension(gint filetype_idx)
 {
-	gchar *result, *ptr;
+	gchar *result;
 	GeanyFiletype *ft = filetypes[filetype_idx];
 
 	if (ft->priv->custom)
@@ -1303,12 +1303,10 @@ gchar *filetypes_get_conf_extension(gint filetype_idx)
 		case GEANY_FILETYPES_CS: result = g_strdup("cs"); break;
 		case GEANY_FILETYPES_MAKE: result = g_strdup("makefile"); break;
 		case GEANY_FILETYPES_NONE: result = g_strdup("common"); break;
+		/* name is Matlab/Octave */
+		case GEANY_FILETYPES_MATLAB: result = g_strdup("matlab"); break;
 		default:
 			result = g_ascii_strdown(ft->name, -1);
-			/* truncate at slash (e.g. for Matlab/Octave) */
-			ptr = strstr(result, "/");
-			if (ptr)
-				*ptr = 0x0;
 			break;
 	}
 	return result;
